<resources>
    <string name="app_name">FamMap</string>

    <string name="login_frag_id">login-fragment</string>

    <string name="login_domain">Server Host:</string>
    <string name="login_port">Server Port:</string>
    <string name="login_email">Email:</string>
    <string name="login_user">User Name:</string>
    <string name="login_pass">Password:</string>
    <string name="login_first">First Name:</string>
    <string name="login_last">Last Name:</string>
    <string name="login_gender">Gender:</string>
    <string name="login_gender_male">Male</string>
    <string name="login_gender_female">Female</string>

    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>

    <string name="button_logout">Log Out</string>

    <string name="default_event_list">Click on a marker to see event details</string>
    <string name="gender_image_alt">Gender</string>

    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_life_story">Life Story Lines</string>
    <string name="desc_life_story">Show/Hide Life Story Lines</string>
    <string name="title_family_tree">Family Tree Lines</string>
    <string name="desc_family_tree">Show/Hide Family Tree Lines</string>
    <string name="title_spouse">Spouse Lines</string>
    <string name="desc_spouse">Show/Hide Spouse Lines</string>
    <string name="title_map_type">Map Type</string>
    <string name="desc_map_type">Background display on Map</string>
    <string name="button_sync">Synchronize Data</string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_activity_title">Search Activity</string>

</resources>
