<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/row_life_story"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_life_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_life_story" />

                <TextView
                    android:id="@+id/desc_life_story"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_life_story" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinner_life_story"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <Switch
                android:id="@+id/switch_life_story"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_family_tree"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_family_tree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_family_tree" />

                <TextView
                    android:id="@+id/desc_family_tree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_family_tree" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinner_family_tree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <Switch
                android:id="@+id/switch_family_tree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_spouse"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_spouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_spouse" />

                <TextView
                    android:id="@+id/desc_spouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_spouse" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinner_spouse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".5" />

            <Switch
                android:id="@+id/switch_spouse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_map_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_map_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_map_type" />

                <TextView
                    android:id="@+id/desc_map_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/desc_map_type" />

            </LinearLayout>

            <Spinner
                android:id="@+id/spinner_map_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/row_sync"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/button_sync"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_sync"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/row_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/button_logout"
                style="@android:style/Widget.Material.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>